--- a/src/app/poke-list/poke-list.component.html
+++ b/src/app/poke-list/poke-list.component.html
@@ -1,18 +1,18 @@
 <div class="container">
-    <mat-card class="example-card" *ngFor="let pokemon of pokemonList">
-        <mat-card-header>
-          <mat-card-title-group>
-            <mat-card-title>{{ pokemon.name }}</mat-card-title>
-            <mat-card-subtitle>
-                <ng-container *ngFor="let type of pokemon.types">
-                    {{ type.type.name }} 
-                </ng-container>
-            </mat-card-subtitle>
-            <img [src]="pokemon.sprites.front_default" alt="Imagem do pokémon {{pokemon.name}}">
-          </mat-card-title-group>
-        </mat-card-header>
-        <mat-card-content>
-          TEXTO
-        </mat-card-content>
-      </mat-card>
+  <mat-card class="example-card" *ngFor="let pokemon of pokemonList" [ngStyle]="{ 'background-color': getColorForType(pokemon.types[0].type.name) }">
+    <mat-card-header>
+      <mat-card-title-group>
+        <mat-card-title>{{ pokemon.name }}</mat-card-title>
+        <mat-card-subtitle>
+          <div *ngFor="let poke of pokemon.types">
+            {{ poke.type.name }}
+          </div>
+        </mat-card-subtitle>
+        <img [src]="pokemon.sprites.front_default" alt="Imagem do pokémon {{pokemon.name}}">
+      </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+      TEXTO
+    </mat-card-content>
+  </mat-card>
 </div>
