--- a/src/app/components/poke-list/poke-list.component.css
+++ b/src/app/components/poke-list/poke-list.component.css
@@ -11,3 +11,11 @@
     cursor: pointer;
 }
 
+.numero-jiggly {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+}
