--- a/src/app/components/pokemon-details/pokemon-details.component.css
+++ b/src/app/components/pokemon-details/pokemon-details.component.css
@@ -1,12 +1,32 @@
+.pokemon-detail {
+  background-color: white;
+}
+
+.title {
+  font-size: 25px;
+}
+
 .pokemon-info-container {
   display: flex;
 }
 
 .pokemon-artwork {
-  width: 200px; 
+  width: 300px; 
   height: auto;
 }
 
 .pokemon-stats {
   margin-left: 20px;
+}
+
+.name-stat {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: rgb(138, 33, 33);
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+.progress-bar {
+  height: 10px;
+  padding-bottom: 2px;
 }
