--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -1,8 +1,9 @@
 <div class="card-container">
-  <mat-card class="pokemon-detail">
+  <mat-card class="pokemon-detail"
+    [ngStyle]="{ 'background': getColorForType(pokemon.types[0].type.name) }">
     <mat-card-header>
       <mat-card-title-group>
-        <mat-card-title class="title">{{ pokemon.name }}</mat-card-title>
+        <mat-card-title class="title"> {{ upperFirstLetter(pokemon.name) }} </mat-card-title>
         <mat-card-subtitle>Extra large</mat-card-subtitle>
       </mat-card-title-group>
     </mat-card-header>
@@ -10,8 +11,9 @@
     <div class="pokemon-info-container">
       <img class="pokemon-artwork" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{pokemon.id}}.png" alt="Imagem {{ pokemon.name }}">
       <div class="pokemon-stats">
-        <div *ngFor="let stats of pokemon.stats">
-           {{ stats.stat.name }} - {{ stats.base_stat }}
+        <div *ngFor="let stats of pokemon.stats">          
+          <span class="name-stat"> {{ stats.stat.name }} </span>
+          <mat-progress-bar class="progress-bar" mode="determinate" value="{{( stats.base_stat / 255) * 100 }}"></mat-progress-bar>         
         </div>
       </div>
     </div>
