--- a/src/app/components/pokemon-details/pokemon-details.component.css
+++ b/src/app/components/pokemon-details/pokemon-details.component.css
@@ -4,6 +4,13 @@
 
 .title {
   font-size: 25px;
+  padding-left: 2px;
+}
+
+.example-header-image {
+  font-size: 22px;
+  padding-top: 7px;
+  width: 12%;
 }
 
 .pokemon-info-container {
@@ -29,4 +36,9 @@
 .progress-bar {
   height: 10px;
   padding-bottom: 2px;
+}
+
+.type-icon {
+  width: 40px;
+  height: 40px;
 }
