--- a/src/app/components/poke-list/poke-list.component.html
+++ b/src/app/components/poke-list/poke-list.component.html
@@ -16,7 +16,7 @@
     <mat-card-content>
       <span></span>
       <div class="numero-jiggly">
-        <div>{{ pokemon.id }}</div>
+        <span> # {{ pokemon.id }}</span>
       </div>
       <!--<img class="jiggly" *ngIf="pokemon.id" src="../../../assets/jigglyID.png" alt="Jiggly Image">-->
     </mat-card-content>
