--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -12,10 +12,11 @@
       <img class="pokemon-artwork" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{pokemon.id}}.png" alt="Imagem {{ pokemon.name }}">
       <div class="pokemon-stats">
         <span class="title-stat">Stats</span>
-        <div *ngFor="let stats of pokemon.stats">          
+        <div class="stats" *ngFor="let stats of pokemon.stats">          
           <span class="name-stat"> {{ stats.stat.name }} </span>
           <mat-progress-bar class="progress-bar" mode="determinate" value="{{( stats.base_stat / 255) * 100 }}"></mat-progress-bar>         
         </div>
+        <span class="title-stat">Total: {{ total }}</span>
       </div>
     </div>
     <mat-card-content class="pokemon-info-container">
