base_stat value with name

--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -13,7 +13,7 @@
       <div class="pokemon-stats">
         <span class="title-stat">Stats</span>
         <div class="stats" *ngFor="let stats of pokemon.stats">          
-          <span class="name-stat"> {{ stats.stat.name }} </span>
+          <span class="name-stat"> {{ stats.stat.name }} : {{ stats.base_stat }} </span>
           <mat-progress-bar class="progress-bar" mode="determinate" value="{{( stats.base_stat / 255) * 100 }}"></mat-progress-bar>         
         </div>
         <span class="title-stat">Total: {{ total }}</span>
@@ -24,6 +24,9 @@
       <div clas="type-info" *ngFor="let poke of pokemon.types">    
         <img class="type-icon" [src]="getTypeImageUrl(poke.type.name)" alt="Tipo do Pokémon">
       </div>
+    </mat-card-content>
+    <mat-card-content>
+      <span>oi</span>
     </mat-card-content>
   </mat-card>
 </div>
