--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -1,6 +1,5 @@
 <div class="card-container">
-  <mat-card class="pokemon-detail"
-    [ngStyle]="{ 'background': getColorForType(pokemon.types[0].type.name) }">
+  <mat-card class="pokemon-detail" [ngStyle]="{ 'background': getColorForType(pokemon.types[0].type.name) }">
     <mat-card-header>
       <div class="example-header-image"># {{ pokemon.id }}</div>
       <mat-card-title-group>
@@ -9,23 +8,26 @@
     </mat-card-header>
 
     <div class="pokemon-info-container">
-      <img class="pokemon-artwork" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{pokemon.id}}.png" alt="Imagem {{ pokemon.name }}">
+      <img class="pokemon-artwork"
+        src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{pokemon.id}}.png"
+        alt="Imagem {{ pokemon.name }}">
       <div class="pokemon-stats">
         <span class="title-stat"> Stats </span>
-        <div class="stats" *ngFor="let stats of pokemon.stats">          
+        <div class="stats" *ngFor="let stats of pokemon.stats">
           <span class="name-stat"> {{ stats.stat.name }} : {{ stats.base_stat }} </span>
-          <mat-progress-bar class="progress-bar" mode="determinate" value="{{( stats.base_stat / 255) * 100 }}"></mat-progress-bar>         
+          <mat-progress-bar class="progress-bar" mode="determinate"
+            value="{{( stats.base_stat / 255) * 100 }}"></mat-progress-bar>
         </div>
         <span class="title-stat"> Total: {{ total }} </span>
       </div>
     </div>
     <mat-card-content class="pokemon-info-container">
       <span class="title-type">Types:</span>
-      <div clas="type-info" *ngFor="let poke of pokemon.types">    
+      <div clas="type-info" *ngFor="let poke of pokemon.types">
         <img class="type-icon" [src]="getTypeImageUrl(poke.type.name)" alt="Tipo do Pokémon">
       </div>
     </mat-card-content>
-    <div class="double-damage">
+    <!--<div class="double-damage">
       <p class="title-type text-center"> Double damage from: </p>
       <mat-card-content class="type-relations-container">
         <div *ngFor="let type of typeRelations" class="type-relations">
@@ -34,6 +36,16 @@
           </div>
         </div>
       </mat-card-content>
-    </div>
-  </mat-card> 
+    </div>-->
+    <table mat-table [dataSource]="moves" class="mat-elevation-z8">
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Move Name </th>
+        <td mat-cell *matCellDef="let move"> {{ move.name }} </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="['name']"></tr>
+      <tr mat-row *matRowDef="let move; columns: ['name']"></tr>
+    </table>
+  </mat-card>
 </div>
