--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -37,13 +37,13 @@
         </div>
       </mat-card-content>
     </div>-->
-    <table mat-table [dataSource]="moves" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef>name</th>
         <td mat-cell *matCellDef="let move"> {{ move.name }} </td>
       </ng-container>
-  
+      
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let move; columns: displayedColumns;"></tr>
     </table>
