--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -37,15 +37,15 @@
         </div>
       </mat-card-content>
     </div>-->
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table *ngIf="dataSource.data.length > 0" [dataSource]="dataSource" class="mat-elevation-z8">
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>name</th>
-        <td mat-cell *matCellDef="let move"> {{ move.name }} </td>
+        <td mat-cell *matCellDef="let move"> {{ move.name }}</td>
       </ng-container>
       
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let move; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </mat-card>
 </div>
