--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -38,20 +38,41 @@
       </mat-card-content>
     </div>-->
     <div class="table-container">
-      <table class="table-move" mat-table *ngIf="dataSource.data.length > 85" [dataSource]="dataSource">
+      <h2 class="title-move">Move List</h2>
+      <table class="table-move mat-elevation-z8" mat-table *ngIf="dataSource.data.length > 85" [dataSource]="dataSource">
         
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>name</th>
-          <td mat-cell *matCellDef="let move"> {{ move.name }}</td>
-        </ng-container>
-
         <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef>id</th>
+          <th mat-header-cell *matHeaderCellDef>ID</th>
           <td mat-cell *matCellDef="let move"> {{ move.id }}</td>
         </ng-container>
+
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let move"> {{ upperFirstLetter(move.name) }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="type">
+          <th mat-header-cell *matHeaderCellDef>Type</th>
+          <td mat-cell *matCellDef="let move"> <img [src]="getTypePixel(move.type.name)" alt="Tipo do Pokémon"> </td>
+        </ng-container>
+
+        <ng-container matColumnDef="power">
+          <th mat-header-cell *matHeaderCellDef>Power</th>
+          <td mat-cell *matCellDef="let move"> {{ move.power }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="accuracy" >
+          <th mat-header-cell *matHeaderCellDef>Accuracy</th>
+          <td mat-cell *matCellDef="let move"> {{ move.accuracy }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="pp">
+          <th mat-header-cell *matHeaderCellDef>PP</th>
+          <td mat-cell *matCellDef="let move"> {{ move.pp }}</td>
+        </ng-container>
         
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns" [ngStyle]="{ 'background': getColorForMove(pokemon.types[0].type.name) }"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngStyle]="{ 'background': getColorForMove(pokemon.types[0].type.name) }"></tr>
       </table>
     </div>
   </mat-card>
