--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -1,7 +1,7 @@
 <div class="card-container">
   <mat-card class="pokemon-detail" [ngStyle]="{ 'background': getColorForType(pokemon.types[0].type.name) }">
     <mat-card-header>
-      <div class="example-header-image"># {{ pokemon.id }}</div>
+      <div class="example-header-image"># {{ pokemon.id }} </div>
       <mat-card-title-group>
         <mat-card-title class="title"> {{ upperFirstLetter(pokemon.name) }} </mat-card-title>
       </mat-card-title-group>
@@ -39,43 +39,58 @@
     </div>-->
     <div class="table-container">
       <h2 class="title-move">Move List</h2>
+
+      <!-- Filter Move list -->
       <mat-form-field>
         <mat-label>Filter</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Filter a movement from the list" #input>
       </mat-form-field>
+
       <table class="table-move mat-elevation-z8" mat-table *ngIf="dataSource.data.length > 85" [dataSource]="dataSource">
+
+        <!-- PP Column -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef>ID</th>
-          <td mat-cell *matCellDef="let move"> {{ move.id }}</td>
+          <td mat-cell *matCellDef="let move"> {{ move.id }} </td>
         </ng-container>
 
+        <!-- Name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let move"> {{ upperFirstLetter(move.name) }} </td>
         </ng-container>
 
+        <!-- Type Column -->
         <ng-container matColumnDef="type">
           <th mat-header-cell *matHeaderCellDef>Type</th>
-          <td mat-cell *matCellDef="let move"> <img [src]="getTypePixel(move.type.name)" alt="Tipo do Pokémon"> </td>
+          <td mat-cell *matCellDef="let move"><img [src]="getTypePixel(move.type.name)" alt="Tipo do Pokémon"></td>
         </ng-container>
 
+        <!-- Power Column -->
         <ng-container matColumnDef="power">
           <th mat-header-cell *matHeaderCellDef>Power</th>
-          <td mat-cell *matCellDef="let move"> {{ move.power }}</td>
+          <td mat-cell *matCellDef="let move"> {{ move.power }} </td>
         </ng-container>
 
+        <!-- Accuracy Column -->
         <ng-container matColumnDef="accuracy" >
           <th mat-header-cell *matHeaderCellDef>Accuracy</th>
           <td mat-cell *matCellDef="let move"> {{ move.accuracy }} </td>
         </ng-container>
 
+        <!-- PP Column -->
         <ng-container matColumnDef="pp">
           <th mat-header-cell *matHeaderCellDef>PP</th>
-          <td mat-cell *matCellDef="let move"> {{ move.pp }}</td>
+          <td mat-cell *matCellDef="let move"> {{ move.pp }} </td>
         </ng-container>
         
         <tr mat-header-row *matHeaderRowDef="displayedColumns" [ngStyle]="{ 'background': getColorForMove(pokemon.types[0].type.name) }"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngStyle]="{ 'background': getColorForMove(pokemon.types[0].type.name) }"></tr>
+      
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr>
       </table>
     </div>
   </mat-card>
