--- a/src/app/components/poke-list/poke-list.component.html
+++ b/src/app/components/poke-list/poke-list.component.html
@@ -15,10 +15,15 @@
     </mat-card-header>
     <mat-card-content>
       <span></span>
-      <div class="numero-jiggly">
+      <div class="poke-number">
         <span> # {{ pokemon.id }}</span>
       </div>
-      <!--<img class="jiggly" *ngIf="pokemon.id" src="../../../assets/jigglyID.png" alt="Jiggly Image">-->
     </mat-card-content>
   </mat-card>
+  <mat-paginator [length]="totalPokemons.length"
+    [pageSize]="30"
+    [pageSizeOptions]="[30]"
+    (page)="onPageChange($event)"
+    aria-label="Select page">
+  </mat-paginator>
 </div>
