--- a/src/app/components/abilities-details/abilities-details.component.html
+++ b/src/app/components/abilities-details/abilities-details.component.html
@@ -1,3 +1,12 @@
-<mat-card>
-    <mat-card-content>{{ability}}</mat-card-content>
+<mat-card *ngFor="let ab of ability">
+    <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>{{ab.name}}</mat-card-title>
+        <mat-card-subtitle>{{ab.id}}</mat-card-subtitle>
+      </mat-card-header>
+    <mat-card-content *ngFor="let abs of ab.effect_entries">
+        <p>
+            {{abs.effect}}
+        </p>
+    </mat-card-content>
 </mat-card>
