--- a/src/app/components/abilities-details/abilities-details.component.html
+++ b/src/app/components/abilities-details/abilities-details.component.html
@@ -1,12 +1,11 @@
-<mat-card *ngFor="let ab of ability">
+<mat-card class="example-card" *ngFor="let ab of ability">
     <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>{{ab.name}}</mat-card-title>
-        <mat-card-subtitle>{{ab.id}}</mat-card-subtitle>
-      </mat-card-header>
+      <mat-card-title> {{ ab.name }} </mat-card-title>
+      <mat-card-subtitle>
+        {{ ab.generation.name }}
+      </mat-card-subtitle>
+    </mat-card-header>
     <mat-card-content *ngFor="let abs of ab.effect_entries">
-        <p>
-            {{abs.effect}}
-        </p>
+        <p> {{ abs.effect }} </p>
     </mat-card-content>
 </mat-card>
