--- a/src/app/components/abilities-details/abilities-details.component.html
+++ b/src/app/components/abilities-details/abilities-details.component.html
@@ -1,6 +1,6 @@
 <mat-card class="example-card" *ngFor="let ab of ability">
     <mat-card-header>
-      <mat-card-title> {{ ab.name }} </mat-card-title>
+      <mat-card-title> {{ upperFirstLetter(ab.name) }} </mat-card-title>
       <mat-card-subtitle>
         {{ ab.generation.name }}
       </mat-card-subtitle>
