--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="header">
     <mat-toolbar-row class="header-row">
         <div class="left-icons">
-            <!--<img class="logo" src="../../assets/logo.png" alt="Icone site">-->
+            <img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site">
         </div>
     </mat-toolbar-row>
 </mat-toolbar>
