--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -10,3 +10,19 @@
     width: 115px;
     padding-top: 4px;
 }
+
+
+span {
+    color: black;
+    padding-left: 2em;
+}
+
+span:hover {
+    color: goldenrod;
+    cursor: pointer;
+    font-size: 23px;
+}
+
+.example-spacer {
+    flex: 1 1 auto;
+}
