--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar>
-    <button mat-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site">
-    </button>
-    <span>Pokedex</span>
-    <span>Move List</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
+  <button mat-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site">
+  </button>
+  <span><a routerLink="/pokedex">Pokedex</a></span>
+  <span><a routerLink="/moves">Move</a></span>
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <mat-icon>favorite</mat-icon>
+  </button>
 </mat-toolbar>
