--- a/src/app/components/abilities-details/abilities-details.component.html
+++ b/src/app/components/abilities-details/abilities-details.component.html
@@ -1,11 +1,15 @@
-<mat-card class="example-card" *ngFor="let ab of ability">
+@for (ab of ability; track ab) {
+  <mat-card class="example-card">
     <mat-card-header>
       <mat-card-title> {{ upperFirstLetter(ab.name) }} </mat-card-title>
       <mat-card-subtitle>
         {{ ab.generation.name }}
       </mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content *ngFor="let abs of ab.effect_entries">
+    @for (abs of ab.effect_entries; track abs) {
+      <mat-card-content>
         <p> {{ abs.effect }} </p>
-    </mat-card-content>
-</mat-card>
+      </mat-card-content>
+    }
+  </mat-card>
+}
