--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -6,88 +6,86 @@
         <mat-card-title class="title"> {{ upperFirstLetter(pokemon.name) }} </mat-card-title>
       </mat-card-title-group>
     </mat-card-header>
-
     <div class="pokemon-info-container">
       <img class="pokemon-artwork"
         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{pokemon.id}}.png"
         alt="Imagem {{ pokemon.name }}">
-      <div class="pokemon-stats">
-        <span class="title-stat"> Stats </span>
-        <div class="stats" *ngFor="let stats of pokemon.stats">
-          <span class="name-stat"> {{ stats.stat.name }} : {{ stats.base_stat }} </span>
-          <mat-progress-bar class="progress-bar" mode="determinate"
-            value="{{( stats.base_stat / 255) * 100 }}"></mat-progress-bar>
+        <div class="pokemon-stats">
+          <span class="title-stat"> Stats </span>
+          @for (stats of pokemon.stats; track stats) {
+            <div class="stats">
+              <span class="name-stat"> {{ stats.stat.name }} : {{ stats.base_stat }} </span>
+              <mat-progress-bar class="progress-bar" mode="determinate"
+              value="{{( stats.base_stat / 255) * 100 }}"></mat-progress-bar>
+            </div>
+          }
+          <span class="title-stat margin-top"> Total: {{ total }} </span>
         </div>
-        <span class="title-stat margin-top"> Total: {{ total }} </span>
-      </div>
-      <div class="pokemon-abilities">
-        <span class="title-ability"> Abilities </span>
-        <div class="stats" *ngFor="let abilities of pokemon.abilities">
-            <span class="name-ability" (click)="abilitiesModal(abilities.ability)"> {{ abilities.ability.name }} </span>
+        <div class="pokemon-abilities">
+          <span class="title-ability"> Abilities </span>
+          @for (abilities of pokemon.abilities; track abilities) {
+            <div class="stats">
+              <span class="name-ability" (click)="abilitiesModal(abilities.ability)"> {{ abilities.ability.name }} </span>
+            </div>
+          }
         </div>
       </div>
-    </div>
-    <mat-card-content class="pokemon-info-container">
-      <span class="title-type">Types:</span>
-      <div clas="type-info" *ngFor="let poke of pokemon.types">
-        <img class="type-icon" [src]="getTypeImageUrl(poke.type.name)" alt="Tipo do Pokémon">
+      <mat-card-content class="pokemon-info-container">
+        <span class="title-type">Types:</span>
+        @for (poke of pokemon.types; track poke) {
+          <div clas="type-info">
+            <img class="type-icon" [src]="getTypeImageUrl(poke.type.name)" alt="Tipo do Pokémon">
+          </div>
+        }
+      </mat-card-content>
+      <div class="table-container">
+        <h2 class="title-move">Move List</h2>
+        <!-- Filter Move list -->
+        <mat-form-field>
+          <mat-label>Filter</mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Filter a movement from the list" #input>
+        </mat-form-field>
+        @if (dataSource.data.length > 85) {
+          <table class="table-move mat-elevation-z8" mat-table [dataSource]="dataSource">
+            <!-- Id Column -->
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef>ID</th>
+              <td mat-cell *matCellDef="let move"> {{ move.id }} </td>
+            </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef>Name</th>
+              <td mat-cell *matCellDef="let move"> {{ upperFirstLetter(move.name) }} </td>
+            </ng-container>
+            <!-- Type Column -->
+            <ng-container matColumnDef="type">
+              <th mat-header-cell *matHeaderCellDef>Type</th>
+              <td mat-cell *matCellDef="let move"><img [src]="getTypePixel(move.type.name)" alt="Tipo do Pokémon"></td>
+            </ng-container>
+            <!-- Power Column -->
+            <ng-container matColumnDef="power">
+              <th mat-header-cell *matHeaderCellDef>Power</th>
+              <td mat-cell *matCellDef="let move"> {{ move.power }} </td>
+            </ng-container>
+            <!-- Accuracy Column -->
+            <ng-container matColumnDef="accuracy" >
+              <th mat-header-cell *matHeaderCellDef>Accuracy</th>
+              <td mat-cell *matCellDef="let move"> {{ move.accuracy }} </td>
+            </ng-container>
+            <!-- PP Column -->
+            <ng-container matColumnDef="pp">
+              <th mat-header-cell *matHeaderCellDef>PP</th>
+              <td mat-cell *matCellDef="let move"> {{ move.pp }} </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns" [ngStyle]="{ 'background': getColorForMove(pokemon.types[0].type.name) }"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngStyle]="{ 'background': getColorForMove(pokemon.types[0].type.name) }"></tr>
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+          </table>
+        }
       </div>
-    </mat-card-content>
-    <div class="table-container">
-      <h2 class="title-move">Move List</h2>
-
-      <!-- Filter Move list -->
-      <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Filter a movement from the list" #input>
-      </mat-form-field>
-
-      <table class="table-move mat-elevation-z8" mat-table *ngIf="dataSource.data.length > 85" [dataSource]="dataSource">
-
-        <!-- Id Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef>ID</th>
-          <td mat-cell *matCellDef="let move"> {{ move.id }} </td>
-        </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
-          <td mat-cell *matCellDef="let move"> {{ upperFirstLetter(move.name) }} </td>
-        </ng-container>
-
-        <!-- Type Column -->
-        <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef>Type</th>
-          <td mat-cell *matCellDef="let move"><img [src]="getTypePixel(move.type.name)" alt="Tipo do Pokémon"></td>
-        </ng-container>
-
-        <!-- Power Column -->
-        <ng-container matColumnDef="power">
-          <th mat-header-cell *matHeaderCellDef>Power</th>
-          <td mat-cell *matCellDef="let move"> {{ move.power }} </td>
-        </ng-container>
-
-        <!-- Accuracy Column -->
-        <ng-container matColumnDef="accuracy" >
-          <th mat-header-cell *matHeaderCellDef>Accuracy</th>
-          <td mat-cell *matCellDef="let move"> {{ move.accuracy }} </td>
-        </ng-container>
-
-        <!-- PP Column -->
-        <ng-container matColumnDef="pp">
-          <th mat-header-cell *matHeaderCellDef>PP</th>
-          <td mat-cell *matCellDef="let move"> {{ move.pp }} </td>
-        </ng-container>
-        
-        <tr mat-header-row *matHeaderRowDef="displayedColumns" [ngStyle]="{ 'background': getColorForMove(pokemon.types[0].type.name) }"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngStyle]="{ 'background': getColorForMove(pokemon.types[0].type.name) }"></tr>
-      
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-        </tr>
-      </table>
-    </div>
-  </mat-card>
-</div>
+    </mat-card>
+  </div>
+  
