--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,8 +10,7 @@
       <mat-icon>favorite</mat-icon>
     </button>
   </mat-toolbar-row>
-  <mat-toolbar-row class="header-move">
-    <span>Move List</span>
-    <span class="example-spacer"></span>
-  </mat-toolbar-row>
 </mat-toolbar>
+<header class="docs-primary-header component-page-header">
+  <h2>Name Component</h2>
+</header>
