--- a/src/app/components/poke-list/poke-list.component.css
+++ b/src/app/components/poke-list/poke-list.component.css
@@ -1,14 +1,24 @@
 .container {
-  padding-left: 2%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.content {
+  width: 90%;
+  justify-content: center;
+  background-color: rgb(33, 130, 175);
 }
 
 .example-card {
-    width: 300px;
-    margin-bottom: 8px;
-    display: inline-block;
-    margin-right: 5px;
-    background-color: white;
-    cursor: pointer;
+  justify-content: center;
+  width: 48%;
+  box-sizing: border-box;
+  min-width: 180px;
+  margin-bottom: 8px;
+  display: inline-block;
+  background-color: white;
+  cursor: pointer;
 }
 
 .poke-number {
@@ -18,4 +28,14 @@
   color: white;
   font-size: 16px;
   font-weight: bold;
+}
+
+@media (max-width: 600px) {
+  .example-card {
+    width: calc(50% - 2%);
+    float: none;
+    margin: 1%;
+    align-items: center;
+    align-content: center;
+  }
 }
