--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -78,8 +78,8 @@
               <th mat-header-cell *matHeaderCellDef>PP</th>
               <td mat-cell *matCellDef="let move"> {{ move.pp }} </td>
             </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns" [ngStyle]="{ 'background': getColorForMove(pokemon.types[0].type.name) }"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngStyle]="{ 'background': getColorForMove(pokemon.types[0].type.name) }"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
               <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
