move screen responsiveness

--- a/src/app/components/move-list/move-list.component.css
+++ b/src/app/components/move-list/move-list.component.css
@@ -19,3 +19,16 @@ mat-form-field {
     margin-bottom: -2em;
 }
 
+@media (max-width: 1000px) {
+    .content {
+      width: 80%
+    }
+}
+  
+
+@media (max-width: 540px) {
+    .content {
+        width: calc(100% - 4%);
+        margin: 2%;
+    }
+} 
