--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -50,3 +50,9 @@ header {
   margin-bottom: 1em;
   border-bottom: 2px solid rgba(0, 0, 0, 0.158);
 }
+
+@media (max-width: 600px) {
+  header {
+    margin-top: 55px;
+  }
+}
